--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Hello</title>
+  <title>Hello world!!!!!</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <h1>Azure Static Web Apps auth demo</h1>
+    <div>
+        <a href="/.auth/login/aad">Login</a>
+        <a href="/.auth/logout">Logout</a>
+    </div>
+    <div>
+        <ul>
+            <li><a href="/anonymous/">Anonymous Role page</a></li>
+            <li><a href="/authenticated/">Authenticated Role page</a></li>
+            <li><a href="/custom/">Custom Role page</a></li>
+        </ul>
+    </div>
 </body>
 </html>
