--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>Azure Static Web Apps auth demo</h1>
-    <div>
-        <a href="/.auth/login/aad">Login</a>
-        <a href="/.auth/logout">Logout</a>
-    </div>
-    <div>
-        <ul>
-            <li><a href="/anonymous/">Anonymous Role page</a></li>
-            <li><a href="/authenticated/">Authenticated Role page</a></li>
-            <li><a href="/custom/">Custom Role page</a></li>
-        </ul>
-    </div>
+<a href="/.auth/login/github">Login ddd</a>
 </body>
 </html>
