--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<a href="/.auth/login/github">Login ddd</a>
+<a href="/.auth/login/aad">Login ddd</a>
 </body>
 </html>
